<resources>
    <string name="app_name">CustomPopUp</string>
    <string name="hello_world">Hello World</string>
    <string name="show_pop_up">Show Pop-Up</string>
    <string name="x">X</string>
    <string name="lin_su">Lin Su</string>
    <string name="new_york_united_states">New-York, United States</string>
    <string name="_150">150</string>
    <string name="followers">Followers</string>
    <string name="follow_me">Follow Me</string>
    <string name="posts">Posts</string>
    <string name="_50">50</string>
    <string name="cities">Cities</string>
    <string name="_19">19</string>
    <string name="image_of_the_uer">Image of the uer</string>
    <string name="get_json_using_asynctask">Get JSON Data Using AsyncTask</string>
    <string name="parse_the_json_data_from_above">Save The Data To Local JSON File</string>
    <string name="transfer_from_local_file_to_sqlite">Transfer From Local File To SQLite</string>
    <string name="fetch_from_sqlite_db_to_recyclerview">Fetch From SQLite DB To RecyclerView</string>
    <string name="name_tv">name_tv</string>
    <string name="image_tv">image_tv</string>
    <string name="quantity_tv">quantity_tv</string>
    <string name="price_tv">price_tv</string>
    <string name="item_image">Item Image</string>
    <string name="item_name_two">Item Name</string>
    <string name="quantity_three">Quantity</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="next_item">Next Item</string>
    <string name="detailed_item_image">Detailed Item Image</string>
    <string name="price_three">Price</string>
    <string name="UNITS">יחידות 25</string>
    <string name="פRICING">35.24 ₪</string>
    <string name="PRODUCT_NAME">שם המוצר</string>
    <string name="shekel">₪</string>
</resources>