<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:layout_margin="5dp"
        android:id="@+id/item_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/circlecropped3"
        android:contentDescription="@string/item_image"
        />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_tv"
        android:textColor="@color/textColor"/>


    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/price_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity_tv"
        android:textColor="@color/textColor"/>

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/quantity_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_tv"
        android:textColor="@color/textColor"/>
</LinearLayout>