<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/item_name_two"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/quantity_three"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dialog_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/price_three"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dialog_button_addCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/textColor"
            android:drawableStart="@drawable/ic_baseline_cart"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:text="@string/add_to_cart"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/dialog_button_nextItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textColor"
            android:drawableStart="@drawable/ic_baseline_next"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:text="@string/next_item"
            android:textAlignment="textStart" />
    </LinearLayout>

    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/detailed_item_image"
        android:padding="10dp"
        android:src="@drawable/not_a" />


</RelativeLayout>