<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_t"
    android:gravity="center"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/retrieve_json_btn"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@drawable/btn_style"
        android:text="@string/get_json_using_asynctask"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/saveToFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_style"
        android:text="@string/parse_the_json_data_from_above"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />
    <Button
        android:id="@+id/transferToSQLite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_style"
        android:text="@string/transfer_from_local_file_to_sqlite"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />
    <Button
        android:id="@+id/from_SQLite_to_rv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_style"
        android:text="@string/fetch_from_sqlite_db_to_recyclerview"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


</LinearLayout>